--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Yuxia Wang / Personal Website"
+title                    : "Yuxia Wang / 王玉霞"
 title_separator          : "-"
 name                     : &name "Yuxia Wang"
 description              : &description "personal description"
