--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Yuxia Wang (PhD)"
-  avatar           : "profile.png"
-  bio              : "Hi, I am Yuxia Wang, a PhD in Geographic Information Science. Currently, I am working in the East China Normal University as a Post-Doc."
+  avatar           : "profile.jpg"
+  bio              : "Welcome. I am Yuxia Wang, a PhD in Geographic Information Science. Currently, I am working in the East China Normal University as a Post-Doc."
   location         : "Shanghai"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
